src/main/java/com/example/springcore/di/Conflict/good/example1/repository/UserRepository.java
package com.example.springcore.di.Conflict.good.example1.repository;

public interface UserRepository {
    String getUser();
}