src/main/java/com/example/springcore/di/Conflict/bad/repository/UserRepository.java
package com.example.springcore.di.Conflict.bad.repository;

public interface UserRepository {
    String getUser();
}